# llmaker

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum  local-llm-cli.md
.github/workflows/: ci.yml
agent/: README.md  pyproject.toml
agent/app/: __init__.py  __main__.py  agent_graph.py  config.py  embed.py  eval.py  extract.py  ingest.py  main.py  memory.py  rag.py  recommend.py  rerank.py  store.py  summarize.py  tools.py  tracing.py  transcribe.py
agent/app/static/: index.html
agent/tests/: fakes.py  test_agent_graph.py  test_eval.py  test_extract.py  test_ingest.py  test_memory.py  test_rag.py  test_recommend.py  test_rerank.py  test_routes.py  test_summarize.py  test_tools.py  test_tracing.py  test_transcribe.py
cmd/llmaker/: main.go
docs/: demo.tape
examples/: llm.yaml  stack.yaml
facade/: README.md  pyproject.toml
facade/app/: __init__.py  __main__.py  config.py  deps.py  main.py  metrics.py  models.py  state.py
facade/app/adapters/: __init__.py  base.py  llamacpp.py  ollama.py
facade/app/routes/: __init__.py  health.py  inference.py  metrics.py  models.py  status.py  ws.py
facade/app/static/: index.html
facade/tests/: conftest.py  fake_adapter.py  test_config.py  test_ollama_adapter.py  test_routes.py
images/agent/: Dockerfile
images/llamacpp/: Dockerfile  entrypoint.sh
images/ollama/: Dockerfile  Dockerfile.cpu  entrypoint.sh
internal/backend/: backend.go  backend_test.go  presets.go  presets_test.go
internal/cli/: app.go  apply.go  browser.go  build.go  chat.go  cli_test.go  display.go  doctor.go  env.go  gpus.go  lifecycle.go  logs.go  ls.go  networks.go  open.go  provision.go  pull.go  resolve.go  service.go  service_test.go  stack.go  stack_test.go  status.go  steps.go  top.go  up.go  version.go  wizard.go
internal/config/: config.go  config_test.go  helpers.go
internal/engine/: gpus.go  gpus_test.go  instance.go  instance_test.go  labels.go  labels_test.go  names.go  names_test.go  ports.go  ports_test.go  runtime.go  service.go  service_test.go  size.go  size_test.go  sysinfo.go  sysinfo_test.go
internal/facade/: client.go  client_test.go  types.go
internal/service/: catalog.go  catalog_test.go
internal/tui/: top.go
internal/ui/: format.go  io.go  progress.go  render.go  table.go  theme.go  ui_test.go
scripts/: install.sh
(+6 files in other folders)
