[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmaker-agent"
version = "0.1.0"
description = "A LangGraph RAG agent that wires an llmaker LLM, vector DB, and embeddings into a chat + ingest API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Raiyan Yahya" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "openai>=1.30",
    "qdrant-client>=1.9",
    "langgraph>=0.2",
    "pypdf>=4.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.6",
]

[project.scripts]
llmaker-agent = "app.__main__:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's File()/Form()/Depends() defaults are idiomatic, not mutable-default bugs.
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Depends", "fastapi.Query"]
