[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llmaker-facade"
version = "0.1.0"
description = "Normalized control-plane facade for llmaker LLM instances (OpenAI-compatible API + status + web UI)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Raiyan Yahya" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "psutil>=5.9",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12.535"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.6",
]

[project.scripts]
llmaker-facade = "app.__main__:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
